--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-**Required Libraries (install using `requirements.txt`):**
+Required Libraries
   - numpy
   - pandas
   - matplotlib
-  - scikit-learn
+  - scikit-learn(instead of sklearn)
